[package]
name = "hypertype"
version = "0.1.0"
edition = "2021"
authors = ["kurgon"]
description = "Customizable CLI that gives the illusion of Discord typing."
readme = "README.md"
license = "GPL-2.0"
keywords = ["discord", "cli", "typing", "type"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.0"
colored = "2.0.0"
dialoguer = "0.10.4"
dirs = "5.0.1"
env_logger = "0.10.0"
indicatif = "0.17.3"
log = "0.4.18"
regex = "1.8.3"
reqwest = "0.11.18"
tokio = { version = "1.28.2", features = ["full"] }
