[package]
name = "hypertype"
version = "0.1.0"
edition = "2021"
authors = ["Kurgon"]
description = "Customizable CLI that gives the illusion of Discord typing."
readme = "README.md"
license = "GPL-2.0"
keywords = ["discord", "cli", "typing", "type"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dialoguer = "0.10.4"
dirs = "5.0.1"
env_logger = "0.10.0"
indicatif = "0.17.3"
log = "0.4.18"
regex = "1.8.3"
reqwest = "0.11.18"
tokio = { version = "1.28.2", features = ["full"] }

# Optimize HyperType for size
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
